写真のリンクちょっと変えた

--- a/themes/etch/layouts/partials/about.html
+++ b/themes/etch/layouts/partials/about.html
@@ -1,7 +1,7 @@
 <ul id="posts">
     <li>
         <div style="text-align:center;">
-            <p><img id="about" src="/avatar.jpg" /></p>
+            <p><img id="about" src="/content/avatar.jpg" /></p>
             <small>筑波大学大学院 博士後期課程1年<br>
             日本学術振興会 特別研究員(DC1)<br>
             <a href="http://www.shimoda.tsukuba.ac.jp/" target="_blank">筑波大学下田臨海実験センター</a><br></small>
