いくつか編集

--- a/themes/etch/assets/css/main.css
+++ b/themes/etch/assets/css/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 header#banner {
-    margin: 25px 0;
+    margin: 20px 0;
 }
 
 header#banner a {
@@ -44,7 +44,7 @@ header#banner nav {
 header#banner nav ul {
     list-style-type: none;
     font-size: 1.05em;
-    text-transform: lowercase;
+    /*text-transform: lowercase;*/
     margin: 0;
     padding: 0;
 }
@@ -55,7 +55,7 @@ header#banner nav ul li {
 }
 
 header#banner nav ul li a {
-    color: #454545;
+    color: #474747;
 }
 
 main#content a {
@@ -92,7 +92,7 @@ main#content h6 + p {
 }
 
 main#content p {
-    color: #394548;
+    color: #474747;
     margin: 16px 0;
 }
 
@@ -109,7 +109,12 @@ main#content ul#posts {
     font-size: 1.6rem;
     margin-top: 0;
     padding: 0px;
-    margin-left: 20px;
+}
+
+main#content ul#posts li {
+    margin: 2px 0;
+    padding: 0;
+    
 }
 
 main#content ol#posts {
@@ -120,24 +125,21 @@ main#content ol#posts {
     margin-left: 20px;
 }
 
-main#content ul#posts li {
-    margin: 5px 0;
-    padding: 0;
-    
-}
+
 main#content ol#posts li {
     margin: 2px 0;
     padding: 0;
 }
+
 main#content ul#posts small {
     font-size: 0.8em;
-    color: #767676;
+    color: #474747;
     margin-left: 10px;
 }
 
 main#content ul#posts mid {
     font-size: 1.0em;
-    color: #767676;
+    color: #474747;
     margin-left: 10px;
 }
 
