--- a/themes/etch/layouts/_default/li.html
+++ b/themes/etch/layouts/_default/li.html
@@ -1,5 +1,5 @@
 <li>
     <small><time>{{ .Date.Format "2006/01/01"}}</time></small>
     <a href="{{ .Permalink }}">
-    <small>{{ .Title }}</small></a><br>
+    <mid>{{ .Title }}</mid></a><br>
 </li>
