--- a/themes/etch/layouts/index.html
+++ b/themes/etch/layouts/index.html
@@ -4,4 +4,5 @@
 {{- partial "papers.html" . -}}
 {{- partial "presentations.html" . -}}
 {{- partial "awards_grants.html" . -}}
+{{- partial "posts.html" . -}}
 {{ end }}
