--- a/themes/etch/layouts/_default/baseof.html
+++ b/themes/etch/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 
     <html>
         {{ if not .Site.IsServer }}
-            {{ partial "google-analytics" . }}
+            {{ partial "/google/analytics" . }}
         {{ end }}
         {{- partial "head.html" . -}}
         <body>
