--- a/themes/etch/layouts/partials/add_mathjax.html
+++ b/themes/etch/layouts/partials/add_mathjax.html
@@ -6,4 +6,4 @@
     };
 </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
