--- a/themes/etch/layouts/partials/add_mathjax.html
+++ b/themes/etch/layouts/partials/add_mathjax.html
@@ -1,1 +1,9 @@
+<script>
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$']]
+  }
+});
+</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.4/es5/startup.js"></script>
