--- a/themes/etch/layouts/partials/add_mathjax.html
+++ b/themes/etch/layouts/partials/add_mathjax.html
@@ -1,9 +1,10 @@
-<script>
+<script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   tex2jax: {
     inlineMath: [['$','$']]
   }
 });
 </script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.4/es5/startup.js"></script>
+<script type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.4/es5/startup.js">
+</script>
