--- a/themes/etch/layouts/partials/add_mathjax.html
+++ b/themes/etch/layouts/partials/add_mathjax.html
@@ -6,4 +6,4 @@
     };
 </script>
 
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+<script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.4/es5/startup.js"></script>
